@@ -7,3 +7,5 @@ mock>=1.3.0,<2.0.0
 docopt>=0.6.2,<1.0.0
 tox>=2.2.0,<3.0.0
 python-coveralls>=2.5.0,<3.0.0
+ptpdb==0.16
+ptpython==0.31
